<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/roolsView"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center|center_horizontal"
        android:text="@string/rools_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <Button
        android:id="@+id/yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/yes_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color1" />

    <Button
        android:id="@+id/no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:text="@string/no_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color2" />

    <TextView
        android:id="@+id/color1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:gravity="center|center_horizontal"
        android:text="@string/color1_txt"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roolsView" />

    <TextView
        android:id="@+id/color2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:gravity="center|center_horizontal"
        android:text="@string/color2_txt"
        android:textColor="#ff9900"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roolsView" />

    <TextView
        android:id="@+id/time"
        android:layout_width="82dp"
        android:layout_height="35dp"
        android:gravity="center|center_horizontal"
        android:text="@string/_01_00"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/points"
        android:layout_width="36dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:gravity="center|center_horizontal"
        android:text="@string/_0"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

</androidx.constraintlayout.widget.ConstraintLayout>